added a little more to the synchronize accounts description

--- a/faq.html
+++ b/faq.html
@@ -119,7 +119,7 @@
 						</dd>
 						<dt>Synchronize Accounts</dt>
 						<dd>
-							<p>All of the accounts assigned to the DaFis orgs associated with the workgroup are updated nightly based on information from DaFis.</p>
+							<p>All of the accounts assigned to the DaFis orgs associated with the workgroup are updated nightly based on information from DaFis.  Assigning the Approver/Account Manager/Purchaser to accounts will not be altered during the nightly update.</p>
 						</dd>
 						<dt>Force Account Select at Approver</dt>
 						<dd>
