--- a/faq.html
+++ b/faq.html
@@ -37,7 +37,7 @@
 		});
 	</script>
 	
-    <title>PrePurchasing</title>
+    <title>PrePurchasing FAQ</title>
   </head>
 
   <body>
@@ -45,7 +45,7 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <h1 id="project_title">PrePurchasing FAQ</h1>
+          <h1 id="project_title">PrePurchasing</h1>
           <h2 id="project_tagline">UC Davis Pre-Purchasing Application</h2>
         </header>
         <nav>
