--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <li><a href="http://prepurchasing.ucdavis.edu/">Purchasing Production Website (Beta)</a></li>
         <li><a href="https://ucdavis.uservoice.com/forums/126891-purchasing/category/31579-issues">Purchasing Feeback Forum</a></li>
         <li><a href="https://github.com/ucdavis/Purchasing">Complete Source Code (GitHub access required)</a></li>
+		<li><a href="faq.html">Frequently Asked Questions</a></li>
     </ul>
 </p>
 
