added to the changelog

--- a/changelog.html
+++ b/changelog.html
@@ -50,6 +50,8 @@
 					</ul>
 				</li>
 				<li>Receiving Module, addition of comments, history of updates.</li>
+				<li>Assign purchaser to requests.</li>
+				<li>Option by workgroup to force account selection at approver level.</li>
 				<li>Various Bug Fixes/Performance Enchancements</li>
 			</ul>
             
