updated the beta features page

--- a/Beta1NewFeatures.html
+++ b/Beta1NewFeatures.html
@@ -76,6 +76,13 @@
 			<p>The printout option has been updated to include pertinent information (line items, accounting) and remove extraneous information (tracking and history).  The purpose of this printout is to provide the necessary pieces of information for purchasers to execute the order request.</p>
 			<a href="images/Changelog/printout.pdf">Click here for Sample</a>
 			
+			<h3>*Assign purchaser</h3>
+			<p>Account Managers and Purchasers have the option of assigning a specific purchaser to a request.  Once the request has been assigned, an email will be sent to the assigned purchaser.</p>
+			<img src="images/ChangeLog/assignpurchaser1.JPG" alt="Assign Purchaser"></img>
+			
+			<h3>*Account selection at Approver Level</h3>
+			<p>A workgroup option has been added to require accounts be specified before the Approver can approve the request.</p>
+			
             <h3>Misc</h3>
             <p>There were many other significant changes made since the April 1st Beta. You can view <a href="https://ucdavis.uservoice.com/forums/126891-purchasing/status/429176">our more than 40 completed tickets</a> for a comprehensive overview.  A few highlights:</p>
             <ul>
