added link to system reqs on index page

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <li><a href="https://ucdavis.uservoice.com/forums/126891-purchasing/category/31579-issues">Purchasing Feeback Forum</a></li>
         <li><a href="https://github.com/ucdavis/Purchasing">Complete Source Code (GitHub access required)</a></li>
 		<li><a href="faq.html">Frequently Asked Questions</a></li>
+        <li><a href="system.html">System Browser Requirements</a></li>
     </ul>
 </p>
 
