--- a/system.html
+++ b/system.html
@@ -101,22 +101,23 @@
 <h3>Recommended Browsers</h3>
 
 <ul>
-    <li><a href="http://www.mozilla.com/en-US/firefox/?from=getfirefox" target="_blank">Firefox</a></li>
+    <li><a href="http://www.mozilla.com/en-US/firefox/?from=getfirefox" target="_blank">Firefox 6+</a></li>
     <li><a href="http://www.google.com/chrome" target="_blank">Google Chrome</a></li>
 </ul>
 
 <h3>Supported Browsers</h3>
 
 <ul>
-    <li><a href="http://www.apple.com/safari/download/" target="_blank">Safari</a></li>
-    <li><a href="http://www.opera.com/browser/download/" target="_blank">Opera</a></li>
+    <li><a href="http://www.apple.com/safari/download/" target="_blank">Safari 4+</a></li>
+    <li><a href="http://www.opera.com/browser/download/" target="_blank">Opera 11+</a></li>
 </ul>
 
 <h3>Unsupported Browsers</h3>
 
 <ul>
-    <li>Internet Explorer 8+ (support coming soon)</li>
-    <li>Internet Explorer 7-</li>
+    <li>Internet Explorer 9+ (support coming soon)</li>
+    <li>Internet Explorer 8- </li>
+    <li>Older browsers not listed in recommended or supported browsers</li>
 </ul>
 
         </section>
