--- a/system.html
+++ b/system.html
@@ -108,6 +108,7 @@
 <h3>Supported Browsers</h3>
 
 <ul>
+    <li><a href="http://windows.microsoft.com/en-us/internet-explorer/products/ie/home/">Internet Explorer 9+</a></li>
     <li><a href="http://www.apple.com/safari/download/" target="_blank">Safari 4+</a></li>
     <li><a href="http://www.opera.com/browser/download/" target="_blank">Opera 11+</a></li>
 </ul>
@@ -115,8 +116,7 @@
 <h3>Unsupported Browsers</h3>
 
 <ul>
-    <li>Internet Explorer 9+ (support coming soon)</li>
-    <li>Internet Explorer 8- </li>
+    <li>Internet Explorer 8- (version 8 or lower)</li>
     <li>Older browsers not listed in recommended or supported browsers</li>
 </ul>
 
