--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 		<li><a href="https://ucdavis.uservoice.com/forums/126891-purchasing">Knowledge Base</a></li>
 		<li><a href="help.html">Getting Help</a></li>
         <li><a href="system.html">System Browser Requirements</a></li>
+		<li><a href="Presentations/townhall.pdf">Town hall slide deck</a></li>
     </ul>
 </p>
 
