updated workgroup tool link

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 		<li><a href="help.html">Getting Help</a></li>
         <li><a href="system.html">System Browser Requirements</a></li>
 		<li><a href="presentations/townhall.pdf">Town Hall Slide Deck</a></li>
+		<li><a href="workgrouptool.html">Workgroup Tool</a></li>
     </ul>
 </p>
 
