--- a/index.html
+++ b/index.html
@@ -35,16 +35,15 @@
 <p>
     Purchasing Quick Links:
     <ul>
+        <li><a href="http://prepurchasing.ucdavis.edu/">Purchasing Production Website</a></li>
         <li><a href="https://test.caes.ucdavis.edu/PrePurchasing">Purchasing Test Website</a></li>
-        <li><a href="http://prepurchasing.ucdavis.edu/">Purchasing Production Website (Beta)</a></li>
-        <li><a href="https://ucdavis.uservoice.com/forums/126891-purchasing/category/31579-issues">Purchasing Feeback Forum</a></li>
-        <li><a href="https://github.com/ucdavis/Purchasing">Complete Source Code (GitHub access required)</a></li>
-		<li><a href="https://ucdavis.uservoice.com/forums/126891-purchasing">Knowledge Base</a></li>
-		<li><a href="help.html">Getting Help</a></li>
         <li><a href="system.html">System Browser Requirements</a></li>
-        <li><a href="workgrouptool.html">Templating Tool to plan your workgroups</a></li>
+        <li><a href="https://ucdavis.uservoice.com/forums/126891-purchasing/category/31579-issues">Purchasing Feeback Forum</a></li>
+        <li><a href="help.html">Getting Help</a></li>
+        <li><a href="https://ucdavis.uservoice.com/forums/126891-purchasing">Knowledge Base</a></li>
+	<li><a href="https://github.com/ucdavis/Purchasing">Complete Source Code (GitHub access required)</a></li>
+	<li><a href="workgrouptool.html">Templating Tool to plan your workgroups</a></li>
 		<li><a href="presentations/townhall.pdf">Town Hall Slide Deck</a></li>
-		<li><a href="workgrouptool.html">Workgroup Tool</a></li>
     </ul>
 </p>
 
