--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ be purchased. This tool is designed to aid departments in organizing purchasing 
 the campus financial systems.</p>
 
 <h3>Changelog</h3>
-<p>Eventually we'll track major changes here. For now, <a href="Beta1NewFeatures.html">see major changes since Beta1</a></p>
+<p>Keep an eye on the <a href="https://ucdavis.uservoice.com/knowledgebase/topics/22061-updates">updates category in our knowledge base.</a> We will post new articles whenever there is a significant update to PrePurchasing so you can stay on top of the latest improvements.</p>
         
 <h3>Authors and Contributors</h3>
 
