--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <li><a href="http://prepurchasing.ucdavis.edu/">Purchasing Production Website</a></li>
         <li><a href="https://test.caes.ucdavis.edu/PrePurchasing">Purchasing Test Website</a></li>
         <li><a href="system.html">System Browser Requirements</a></li>
-        <li><a href="https://ucdavis.uservoice.com/forums/126891-purchasing/category/31579-issues">Purchasing Feeback Forum</a></li>
+        <li><a href="https://ucdavis.uservoice.com/forums/126891-purchasing/category/31579-issues">Purchasing Feedback Forum</a></li>
         <li><a href="help.html">Getting Help</a></li>
         <li><a href="https://ucdavis.uservoice.com/forums/126891-purchasing">Knowledge Base</a></li>
 	<li><a href="https://github.com/ucdavis/Purchasing">Complete Source Code (GitHub access required)</a></li>
