Added links to instructional videos

--- a/index.html
+++ b/index.html
@@ -46,6 +46,38 @@
 		<li><a href="presentations/townhall.pdf">Town Hall Slide Deck</a></li>
     </ul>
 </p>
+          <p>
+              Instructional Viedos
+              <ul>
+                  <li>
+                      <a href="http://youtu.be/2UfpZOgsWwA" target="_blank">1) Departmental Admin Power Point Presentation</a>
+                  </li>
+                  <li>
+                      <a href="http://youtu.be/Td_812wWgOA" target="_blank">2) Workgroup Tool</a>
+                  </li>
+                  <li>
+                      <a href="http://youtu.be/s1BwMkODalA" target="_blank">3) Organizations</a>
+                  </li>
+                  <li>
+                      <a href="http://youtu.be/VITVL6UjndM" target="_blank">4) Create Workgroup</a>
+                  </li>
+                  <li>
+                      <a href="http://youtu.be/dU0QM1oOI40" target="_blank">5) Edit Workgroup</a>
+                  </li>
+                  <li>
+                      <a href="http://youtu.be/_vvGpo3JPNQ" target="_blank">6) Create Orders</a>
+                  </li>
+                  <li>
+                      <a href="http://youtu.be/LgZA5y8oZcI" target="_blank">7) Approve and Deny Orders</a>
+                  </li>
+                  <li>
+                      <a href="http://youtu.be/_LZEgxA6KUU" target="_blank">8) Preferences</a>
+                  </li>
+                  <li>
+                      <a href="http://youtu.be/29Q2bDZaaKQ" target="_blank">9) Help System</a>
+                  </li>
+              </ul>
+          </p>
 
 <p>You must have a valid kerberos login and password to access this system. Please contact your department prepurchasing administrator for permissions.</p>
 
