--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </ul>
 </p>
           <p>
-              Instructional Viedos
+              Instructional Videos
               <ul>
                   <li>
                       <a href="http://youtu.be/2UfpZOgsWwA" target="_blank">1) Departmental Admin Power Point Presentation</a>
