Toast Uservoice from gihub.io pages

--- a/help.html
+++ b/help.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
   <head>
@@ -73,14 +73,14 @@
 			<dl>
 				<dt>Providing Feedback</dt>
 				<dd>
-					<p>If you have an idea for PrePurchasing, please submit them to our User Voice feedback.  There you will be able to browse other user's ideas and vote on the ones you like.</p>
+					<p>If you have an idea for PrePurchasing, please submit them to feedback.  There you will be able to browse other user's ideas and vote on the ones you like.</p>
 					
-					<p><a href="https://ucdavis.uservoice.com/forums/126891-purchasing">Click Here to be taken to User Voice</a></p>
+					<p><a href="https://feedback.ucdavis.edu/app/Purchasing">Click Here to be taken to our Feedback form</a></p>
 				</dd>
 				<dt>Getting Help to Common Questions</dt>
 				<dd>
-					<p>Have a question aobut how to do something?  Browse our knowledge base, it contains answers to the most common questions other users have asked.</p>
-					<p><a href="http://ucdavis.uservoice.com/knowledgebase">Click here to be taken to our Knowledge Base</a></p>
+					<p>Have a question about how to do something?  Browse our knowledge base, it contains answers to the most common questions other users have asked.</p>
+					<p><a href="http://computing.caes.ucdavis.edu/documentation/#purchasing">Click here to be taken to our Knowledge Base</a></p>
 				</dd>
 				<dt>Getting Help for a Specific Issue</dt>
 				<dd>
