--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         <li><a href="http://prepurchasing.ucdavis.edu/">Purchasing Production Website</a></li>
         <li><a href="https://test.caes.ucdavis.edu/PrePurchasing">Purchasing Test Website</a></li>
         <li><a href="system.html">System Browser Requirements</a></li>
-        <li><a href="https://ucdavis.uservoice.com/forums/126891-purchasing/category/31579-issues">Purchasing Feedback Forum</a></li>
+        <li><a href="https://feedback.ucdavis.edu/app/Purchasing">Purchasing Feedback Forum</a></li>
         <li><a href="help.html">Getting Help</a></li>
-        <li><a href="https://ucdavis.uservoice.com/forums/126891-purchasing">Knowledge Base</a></li>
+        <li><a href="http://computing.caes.ucdavis.edu/documentation/#purchasing">Knowledge Base</a></li>
 	<li><a href="https://github.com/ucdavis/Purchasing">Complete Source Code (GitHub access required)</a></li>
 	<li><a href="workgrouptool.html">Templating Tool to plan your workgroups</a></li>
 		<li><a href="presentations/townhall.pdf">Town Hall Slide Deck</a></li>
@@ -103,7 +103,7 @@ be purchased. This tool is designed to aid departments in organizing purchasing 
 the campus financial systems.</p>
 
 <h3>Changelog</h3>
-<p>Keep an eye on the <a href="https://ucdavis.uservoice.com/knowledgebase/topics/22061-updates">updates category in our knowledge base.</a> We will post new articles whenever there is a significant update to PrePurchasing so you can stay on top of the latest improvements.</p>
+<p>Keep an eye on the <a href="http://computing.caes.ucdavis.edu/documentation/#purchasing">updates category in our knowledge base.</a> We will post new articles whenever there is a significant update to PrePurchasing so you can stay on top of the latest improvements.</p>
         
 <h3>Authors and Contributors</h3>
 
