--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <li><a href="system.html">System Browser Requirements</a></li>
         <li><a href="https://feedback.ucdavis.edu/app/Purchasing">Purchasing Feedback Forum</a></li>
         <li><a href="help.html">Getting Help</a></li>
-        <li><a href="http://computing.caes.ucdavis.edu/documentation/#purchasing">Knowledge Base</a></li>
+        <li><a href="http://computing.caes.ucdavis.edu/documentation/purchasing">Knowledge Base</a></li>
 	<li><a href="https://github.com/ucdavis/Purchasing">Complete Source Code (GitHub access required)</a></li>
 	<li><a href="workgrouptool.html">Templating Tool to plan your workgroups</a></li>
 		<li><a href="presentations/townhall.pdf">Town Hall Slide Deck</a></li>
