--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ be purchased. This tool is designed to aid departments in organizing purchasing 
 the campus financial systems.</p>
 
 <h3>Changelog</h3>
-<p>Keep an eye on the <a href="http://computing.caes.ucdavis.edu/documentation/#purchasing">updates category in our knowledge base.</a> We will post new articles whenever there is a significant update to PrePurchasing so you can stay on top of the latest improvements.</p>
+<p>Keep an eye on the <a href="http://computing.caes.ucdavis.edu/documentation/purchasing">updates category in our knowledge base.</a> We will post new articles whenever there is a significant update to PrePurchasing so you can stay on top of the latest improvements.</p>
         
 <h3>Authors and Contributors</h3>
 
